--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html {
 	background-size: cover;
     min-height: 100%;
     width: 100%;
-    background-image: url("../img/circuit-board.jpg");
+    background-image: url("../img/circuit-board.webp");
     margin: 0px;
     padding: 0px;
     content: '';
