--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
     height: 100vh;
-    width:100;
+    width:100%;
 }
 
 body,
@@ -17,7 +17,8 @@ html {
     margin: 0px;
     padding: 0px;
     content: '';
-    box-shadow: inset 0 0 0 10000px rgba(0,0,0,.7);
+    background-color: #282828;
+    background-blend-mode: multiply;
 }
 
 
