--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
 	padding: 0;
 	margin: 0;
-    height: 100vh;
-    width:100%;
+  height: 100vh;
+  width:100%;
 }
 
 body,
@@ -11,11 +11,11 @@ html {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-    min-height: 100%;
-    width: 100%;
-    background-image: url("../img/circuit-board.webp");
-    margin: 0px;
-    padding: 0px;
+  min-height: 100%;
+  width: 100%;
+  background-image: url("../img/circuit-board.webp");
+  margin: 0px;
+  padding: 0px;
 }
 
 .text-box {
@@ -25,19 +25,19 @@ html {
 }
 
 .box {
-    text-align: center;
-    background-color: black;
-    margin: auto;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  background-color: black;
+  margin: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fa {
 	display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-black {
@@ -154,32 +154,37 @@ html {
 }
 
 .child-4 {
-	order: 4;	
+	order: 4;
 }
 
 /*==============================================================================external sites==*/
 
 @media only screen and (min-width: 765px) {
-    .flex-child {
-    	width: 50%;
-    }
+	.flex-child {
+		width: 50%;
+	}
+
+	.top-pushdown {
+		padding-top: 100px;
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	.top-pushdown {
+		padding-top: 150px;
+	}
 }
 
 @media only screen and (min-width: 1200px) {
 	body {
-    	overflow: hidden;
-    }
-	
+		overflow: hidden;
+	}
+
 	.flex-child {
 		width: 25%;
 	}
-	
-	.top-pushdown {
-		padding-top: 200px;
-	}
+
+
 }
 
 /*==============================================================================media queries==*/
-
-
-
