--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,6 @@ html {
   align-items: center;
 }
 
-.btn-black {
-	background-color: black;
-}
-
 /*==============================================================================evrythang==*/
 
 .awesome {
@@ -80,6 +76,20 @@ html {
 }
 
 /*==============================================================================RGB==*/
+
+.btn-black {
+	background-color: black;
+}
+
+.btn-home {
+	height: 80px;
+	width: 145px;
+	background-color: black;
+	font-size: 50px;
+	padding: 4px;
+}
+
+/*==============================================================================.btn's==*/
 
 .hero {
 	height: 85%;
@@ -158,6 +168,19 @@ html {
 }
 
 /*==============================================================================external sites==*/
+
+.contact-form {
+  width: 50%;
+  padding: 25px;
+  margin: 0 auto;
+  background: rgba(210,210,155, .65);
+}
+
+.modal-footer {
+  background-color: rgba(210,210,155, .65);
+}
+
+/*==============================================================================contact page==*/
 
 @media only screen and (min-width: 765px) {
 	.flex-child {
