changed background and did some cross browsser testing to make sure background works with -webkit- and -moz-

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html {
 	background-size: cover;
   min-height: 100%;
   width: 100%;
-  background-image: url("../img/circuit-board.webp");
+  background-image:  url("../img/surf.jpeg");
   margin: 0px;
   padding: 0px;
 }
