inprocess of ading picture to contact page and changing the hr thing to div tet color changer......MORE RGBgit add .git add .git add .git add .

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,9 +110,11 @@ html {
 }
 
 .underline {
-	width: 100%;
+	width: fit-content;
 	margin:0 auto;
 	font-size: 20px;
+	text-align: center;
+	background-color: black;
 	-webkit-animation:colorchange 20s infinite alternate;
 }
 
@@ -178,6 +180,11 @@ html {
 
 .modal-footer {
   background-color: rgba(210,210,155, .65);
+}
+
+.contact-text {
+	display: flex;
+	flex-direction: column;
 }
 
 /*==============================================================================contact page==*/
