--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
 	padding: 0;
 	margin: 0;
-  height: 100vh;
-  width:100%;
+	height: 100vh;
+	width:100%;
 }
 
 body,
@@ -11,11 +11,12 @@ html {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-  min-height: 100%;
-  width: 100%;
-  background-image:  url("../img/surf.jpeg");
-  margin: 0px;
-  padding: 0px;
+	min-height: 100%;
+	min-width: 100%;
+	background-image:  url("../img/surf.jpeg");
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 }
 
 .text-box {
@@ -25,19 +26,24 @@ html {
 }
 
 .box {
-  text-align: center;
-  background-color: black;
-  margin: auto;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	text-align: center;
+	background-color: black;
+	margin: auto;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .fa {
 	display: flex;
-  justify-content: center;
-  align-items: center;
+	justify-content: center;
+	align-items: center;
 }
 
 /*==============================================================================evrythang==*/
@@ -210,26 +216,30 @@ html {
 /*==============================================================================external sites==*/
 
 .contact-form {
-  width: 50%;
-  padding: 25px;
-  margin: 0 auto;
-  background: rgba(210,210,155, .65);
+	width: 50%;
+	padding: 25px;
+	margin: 0 auto;
+	background: rgba(210,210,155, .65);
 }
 
 .modal-footer {
-  background-color: rgba(210,210,155, .65);
+	background-color: rgba(210,210,155, .65);
+}
+
+.contact-image {
+	order: 2;
 }
 
 .contact-text {
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
-	justify-content: center;
+	order: 1;
 }
 
 .profile-picture {
-	height: auto;
-	max-width: 100%;
+	width: 100vw;
+	display: inline-block;
+	border: 30px solid rgba(255,250,240, 1);
 }
 
 /*==============================================================================contact page==*/
@@ -248,19 +258,31 @@ html {
 	.top-pushdown {
 		padding-top: 150px;
 	}
+	
+	.profile-picture {
+		width: auto;
+		height: 100vh;
+		margin: 5px 15% 0px 15%;
+	}
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1025px) {
 	body {
 		overflow: hidden;
 	}
+}
 
+@media only screen and (min-width: 1200px) {
 	.flex-child {
 		width: 25%;
 	}
 
 	.picture-box {
 		height: 100%;
+	}
+
+	.profile-picture {
+		float: right;
 	}
 
 }
