--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+	font-family: Product Sans;
+}
+
 body {
 	padding: 0;
 	margin: 0;
@@ -294,7 +298,7 @@ html {
 	}
 	
 	.name {
-		margin-top: 200px;
+		margin-top: 100px;
 	}
 	
 	.profile-picture {
