--- a/css/styles.css
+++ b/css/styles.css
@@ -351,6 +351,7 @@ li {
 
 .contact-image {
 	order: 2;
+	overflow-x: hidden;
 }
 
 .contact-text {
@@ -390,6 +391,8 @@ li {
 
 .sm {
 	width: 19vw;
+	max-width: 100px;
+    max-height: 100px;
 }
 
 /*==============================================================================social media==*/
