--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ li {
 	font-family: Product Sans;
 }
 
+label {
+	color: white;
+}
+
 .text-box {
 	text-align: center;
 	color: white;
@@ -372,6 +376,16 @@ li {
   color: white;
 }
 
+.miniInput {
+	width: 27px;
+	height: 20px;
+}
+
+.miniInput02 {
+	width: 35px;
+	height: 20px;
+}
+
 /*==============================================================================contact==*/
 
 .social-media {
@@ -483,3 +497,45 @@ li {
 	}
 }
 /*==============================================================================media queries==*/
+
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+	background-color: rgba(225,225,225,.5);
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
