--- a/css/styles.css
+++ b/css/styles.css
@@ -92,13 +92,13 @@ input {
 /*==============================================================================evrythang==*/
 
 @font-face {
-  font-family: 'Product Sans';
-  src: url(''); /* IE9 Compat Modes */
-  src: url('') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/ProductSans-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/ProductSans-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/ProductSans-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/ProductSans-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
+	font-family: 'Product Sans';
+	src: url(''); /* IE9 Compat Modes */
+	src: url('') format('embedded-opentype'); /* IE6-IE8 */
+	src: url('fonts/ProductSans-Regular.woff2') format('woff2'); /* Super Modern Browsers */
+	src: url('fonts/ProductSans-Regular.woff') format('woff'); /* Pretty Modern Browsers */
+	src: url('fonts/ProductSans-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
+	src: url('fonts/ProductSans-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
 /*==============================================================================fonts'==*/
@@ -173,9 +173,9 @@ input {
 
 .btn-lg-bottom {
 	position: absolute;
-  bottom: 0;
-  left: 0;
-  border-radius: 100px 0px 100px 0px;
+	bottom: 0;
+	left: 0;
+	border-radius: 100px 0px 100px 0px;
 }
 
 .btn-black {
@@ -191,53 +191,6 @@ input {
 }
 
 /*==============================================================================.btn's==*/
-
-#tooltip
-{
-    text-align: center;
-    color: #fff;
-    background: #111;
-    position: absolute;
-    z-index: 100;
-    padding: 15px;
-}
-
-    #tooltip:after /* triangle decoration */
-    {
-        width: 0;
-        height: 0;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-top: 10px solid #111;
-        content: '';
-        position: absolute;
-        left: 50%;
-        bottom: -10px;
-        margin-left: -10px;
-    }
-
-        #tooltip.top:after
-        {
-            border-top-color: transparent;
-            border-bottom: 10px solid #111;
-            top: -20px;
-            bottom: auto;
-        }
-
-        #tooltip.left:after
-        {
-            left: 10px;
-            margin: 0;
-        }
-
-        #tooltip.right:after
-        {
-            right: 10px;
-            left: auto;
-            margin: 0;
-        }
-
-/*==============================================================================.tooltip's==*/
 
 .home {
 	height: 100%;
@@ -372,9 +325,9 @@ input {
 }
 
 .bio-2 {
-  margin: 20px 0px 20px 0px;
-  font-size: 30px;
-  color: white;
+	margin: 20px 0px 20px 0px;
+	font-size: 30px;
+	color: white;
 }
 
 .miniInput {
@@ -394,10 +347,10 @@ input {
 /*==============================================================================contact==*/
 
 .social-media {
-  display: flex;
-  overflow: auto;
-  align-items: center;
-  justify-content: space-around;
+	display: flex;
+	overflow: auto;
+	align-items: center;
+	justify-content: space-around;
 	-webkit-flex-wrap: nowrap;
 	flex-wrap: nowrap;
 	flex-direction: row;
@@ -424,10 +377,6 @@ input {
 	.top-pushdown {
 		padding-top: 100px;
 	}
-}
-
-@media only screen and (min-width: 992px) {
-
 }
 
 @media only screen and (min-width: 1025px) {
@@ -503,24 +452,20 @@ input {
 }
 /*==============================================================================media queries==*/
 
-
-
-/* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content */
 .modal-content {
 	background-color: rgba(225,225,225,.2);
     margin: auto;
@@ -529,7 +474,6 @@ input {
     width: 80%;
 }
 
-/* The Close Button */
 .close {
     color: white;
     float: right;
@@ -543,4 +487,3 @@ input {
     text-decoration: none;
     cursor: pointer;
 }
-
